Fixed a bug where the page would overflow on x on mobile because of slide animations

--- a/css/style.css
+++ b/css/style.css
@@ -21,6 +21,7 @@ html {
     -webkit-box-sizing: border-box;
     box-sizing: border-box;
     position: relative;
+    overflow-x: hidden;
 }
 
 *, *::before, *::after {
